[package]
name = "btc-tx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.32.6"
ic-cdk = "0.17.2"
ic-cdk-macros = "0.18.1"
candid = "0.10.14"
serde = { version = "1.0", features = ["derive"] }

tiny-keccak = { version = "2.0.2", features = ["sha3"] }
sha2 = "0.10.2"
hex = "0.4.3"
